--- a/dentaladmin/templates/_base.html
+++ b/dentaladmin/templates/_base.html
@@ -78,7 +78,7 @@
         <ul id="dashboard-menu">
             <li {% block active-dashboard %}{% endblock %}>
                 <a href="{% url 'dashboard' %}">
-                    <i class="icon-home"></i>
+                    <i class="icon-bar-chart"></i>
                     <span>Dashboard</span>
                 </a>
             </li>
@@ -107,6 +107,19 @@
                     <i class="icon-sitemap"></i>
                     <span>Sequences</span>
                 </a>
+            </li>
+            <li {% block active-reports %}{% endblock %}>
+                <a class="dropdown-toggle" href="#">
+                    <i class="icon-tasks"></i>
+                    <span>Reports</span>
+                    <i class="icon-chevron-down"></i>
+                </a>
+                <ul class="submenu" style="display: none;">
+                    {% if auth_user.role == 'admin' or auth_user.role == 'office'%}
+                        <li><a href="{% url 'reports_total' %}">Total incomes</a></li>
+                    {% endif %}
+                    <li><a href="{% url 'reports_payment' %}">Payments</a></li>
+                </ul>
             </li>
         </ul>
     </div>
