Reports module part 2

--- a/dentaladmin/apps/auth/templates/auth/dashboard.html
+++ b/dentaladmin/apps/auth/templates/auth/dashboard.html
@@ -5,6 +5,10 @@
 
 {% block style %}
     <link rel="stylesheet" href="{% static 'css/compiled/index.css' %}" type="text/css" media="screen" />
+    <!-- open sans font -->
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css' />
+    <!-- lato font -->
+    <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css' />
 {% endblock %}
 
 {% block title %} Dashboard {% endblock %}
@@ -17,47 +21,43 @@
         <div class="row stats-row">
             <div class="col-md-3 col-sm-3 stat">
                 <div class="data">
-                    <span class="number">2457</span>
-                    visits
+                    <span class="number">{{ patients }}</span>
+                    patients
                 </div>
-                <span class="date">Today</span>
+                <span class="date">Satisfied</span>
             </div>
             <div class="col-md-3 col-sm-3 stat">
                 <div class="data">
-                    <span class="number">3240</span>
+                    <span class="number">{{ users }}</span>
                     users
                 </div>
-                <span class="date">February 2013</span>
+                <span class="date">Registered</span>
             </div>
             <div class="col-md-3 col-sm-3 stat">
                 <div class="data">
-                    <span class="number">322</span>
-                    orders
+                    <span class="number">{{ sequences|length }}</span>
+                    Treatments
                 </div>
-                <span class="date">This week</span>
+                <span class="date">Done</span>
             </div>
             <div class="col-md-3 col-sm-3 stat last">
                 <div class="data">
-                    <span class="number">$2,340</span>
-                    sales
+                    <span class="number">${{ total }}</span>
+                    incomes
                 </div>
-                <span class="date">last 30 days</span>
+                <span class="date">Total</span>
             </div>
         </div>
     </div>
     <!-- end upper main stats -->
+
     <div id="pad-wrapper">
         <!-- statistics chart built with jQuery Flot -->
         <div class="row chart">
             <div class="col-md-12">
-                <h4 class="clearfix pull-left">
-                    Statistics
-                </h4>
-                <div class="btn-group pull-right">
-                    <button class="glow left">DAY</button>
-                    <button class="glow middle active">MONTH</button>
-                    <button class="glow right">YEAR</button>
-                </div>
+                <h2 class="clearfix pull-left">
+                    Dental clinic administration software
+                </h2>
             </div>
             <div class="col-md-12">
                 <div id="statsChart"></div>
@@ -70,89 +70,12 @@
     <script src="{% static 'js/jquery-latest.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <script src="{% static 'js/jquery-ui-1.10.2.custom.min.js' %}"></script>
-    <!-- knob -->
-    <script src="{% static 'js/jquery.knob.js' %}"></script>
-    <!-- flot charts -->
-    <script src="{% static 'js/jquery.flot.js' %}"></script>
-    <script src="{% static 'js/jquery.flot.stack.js' %}"></script>
-    <script src="{% static 'js/jquery.flot.resize.js' %}"></script>
-    <script src="{% static 'js/theme.js' %}"></script>
+{#    <!-- knob -->#}
+{#    <script src="{% static 'js/jquery.knob.js' %}"></script>#}
+{#    <!-- flot charts -->#}
+{#    <script src="{% static 'js/jquery.flot.js' %}"></script>#}
+{#    <script src="{% static 'js/jquery.flot.stack.js' %}"></script>#}
+{#    <script src="{% static 'js/jquery.flot.resize.js' %}"></script>#}
+{#    <script src="{% static 'js/theme.js' %}"></script>#}
 
-    <script type="text/javascript">
-        $(function () {
-
-            // jQuery Knobs
-            $(".knob").knob();
-
-            // jQuery UI Sliders
-            $(".slider-sample1").slider({
-                value: 100,
-                min: 1,
-                max: 500
-            });
-            $(".slider-sample2").slider({
-                range: "min",
-                value: 130,
-                min: 1,
-                max: 500
-            });
-            $(".slider-sample3").slider({
-                range: true,
-                min: 0,
-                max: 500,
-                vales: [ 40, 170 ]
-            });
-
-            // jQuery Flot Chart
-            var visits = [[1, 50], [2, 40], [3, 45], [4, 23],[5, 55],[6, 65],[7, 61],[8, 70],[9, 65],[10, 75],[11, 57],[12, 59]];
-            var visitors = [[1, 25], [2, 50], [3, 23], [4, 48],[5, 38],[6, 40],[7, 47],[8, 55],[9, 43],[10,50],[11,47],[12, 39]];
-
-            var plot;
-            plot = $.plot($("#statsChart"),
-                    [{data: visits, label: "Signups"},
-                        {data: visitors, label: "Visits"}], {
-                        series: {
-                            lines: {
-                                show: true,
-                                lineWidth: 1,
-                                fill: true,
-                                fillColor: {colors: [{opacity: 0.1}, {opacity: 0.13}]}
-                            },
-                            points: {
-                                show: true,
-                                lineWidth: 2,
-                                radius: 3
-                            },
-                            shadowSize: 0,
-                            stack: true
-                        },
-                        grid: {
-                            hoverable: true,
-                            clickable: true,
-                            tickColor: "#f9f9f9",
-                            borderWidth: 0
-                        },
-                        legend: {
-                            // show: false
-                            labelBoxBorderColor: "#fff"
-                        },
-                        colors: ["#a7b5c5", "#30a0eb"],
-                        xaxis: {
-                            ticks: [[1, "JAN"], [2, "FEB"], [3, "MAR"], [4, "APR"], [5, "MAY"], [6, "JUN"],
-                                [7, "JUL"], [8, "AUG"], [9, "SEP"], [10, "OCT"], [11, "NOV"], [12, "DEC"]],
-                            font: {
-                                size: 12,
-                                family: "Open Sans, Arial",
-                                variant: "small-caps",
-                                color: "#697695"
-                            }
-                        },
-                        yaxis: {
-                            ticks: 3,
-                            tickDecimals: 0,
-                            font: {size: 12, color: "#9da3a9"}
-                        }
-                    });
-        });
-    </script>
 {% endblock %}
