--- a/apps/patients/templates/patients/create.html
+++ b/apps/patients/templates/patients/create.html
@@ -26,7 +26,7 @@
                     <div class="form-group">
                         <label for="dni" class="col-md-2 control-label">Dni</label>
                         <div class="col-md-8">
-                            <input type="text" class="form-control" name="dni" id="dni" placeholder="Dni" value="{{ dni }}" required>
+                            <input type="number" class="form-control" name="dni" id="dni" placeholder="Dni" value="{{ dni }}" required>
                         </div>
                     </div>
                     <div class="form-group">
